--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,10 @@ Do not remove the back-link in this web template
 @import url('font-awesome.css');  
 @import url('animate.css');
 
+rounded {
+	border-radius:.25rem !important;
+}
+
 body {
 	font-family:'Open Sans', Arial, sans-serif;
 	font-size:14px;
@@ -836,8 +840,10 @@ ul.portfolio-categ li a{
 	color: #14A085;
 }
 ul.portfolio-categ li.active{
-border: 1px solid #D7D8D6;
-background-color: #EAEAEA;
+
+border: 1px solid #D7D8D6;
+
+background-color: #EAEAEA;
 }
 ul.portfolio-categ li.active a:hover, ul.portfolio-categ li a:hover,ul.portfolio-categ li a:focus,ul.portfolio-categ li a:active {
 	text-decoration:none;
